# varnish-cache

doc/sphinx/reference/: varnish-cli.rst  vcl.rst
doc/sphinx/tutorial/: backend_servers.rst  starting_varnish.rst
doc/sphinx/users-guide/: vcl-separate.rst
etc/: example.vcl
include/: vct.h  vrt.h
include/tbl/: symbol_kind.h
lib/libvarnish/: vct.c
lib/libvcc/: Makefile.am  vcc_acl.c  vcc_action.c  vcc_backend.c  vcc_compile.c  vcc_compile.h  vcc_expr.c  vcc_parse.c  vcc_symb.c  vcc_table.c  vcc_token.c  vcc_types.c  vcc_vmod.c  vcc_xref.c  vmodtool.py
lib/libvmod_blob/: hex.c  url.c  vmod_blob.c
lib/libvmod_debug/: vmod.vcc  vmod_debug.c
man/: Makefile.am
vmod/: automake_boilerplate_debug.am  automake_boilerplate_vtc.am  vmod_debug.c  vmod_debug.vcc  vmod_debug_version.c  vmod_vcs.h  vmod_vtc.c  vmod_vtc.vcc  vmod_vtc_version.c
